2007-04-18 Alexander Malysh <amalysh at kannel.org>
   * doc/userguide/userguide.xml, gw/bb_boxc.c, gw/bb_smscconn.c, gw/bb_smscconn_cb.h,
     gw/bearerbox.c, gw/bearerbox.h, gwlib/cfg.def: applied patch that implements
     outgoing queue (MT) limit.

2007-04-18 Alexander Malysh <amalysh at kannel.org>
   * gwlib/mime.c: applied patch should help take care of issues where the
     Content-ID for the start element is enclosed in '<' '>'.
     Thanks to Paul Bagyenda <bagyenda at dsmagic.com> for the patch.
     [Msg-Id: <D4225F55-C681-4B36-B383-67B8B9C7DE46@dsmagic.com>]

2007-04-16  Stipe Tolj  <stolj at kannel.org>
   * gw/smsc/smsc_http.c: fixing default charset encoding policy in chaining
     Kannel instances via 'system-type = kannel'. As we use now UTF-8 as
     internal encoding, but still WINDOWS-1252 as default encoding for 
     smsbox's sendsms HTTP interace, we need to forward explicetly the CGI
     variable charset to the next instance here to let the smsbox know that
     we pass the message in UFT-8 format for normal text messages.
     This is a temporary issue, as long as smsbox's sendsms HTTP interface
     isn't switched to UTF-8, which we should do in next major revision.

2007-04-14  Stipe Tolj  <stolj at kannel.org>
   * gwlib/octstr.c: imunize octstr_truncate() for NULL argument. Currently
     this would cause a panic when charset_utf8_to_gsm(NULL) is called. Now
     same safety bail-out behaviour as octstr_insert().

2007-04-11 Alexander Malysh <amalysh at kannel.org>
   * gw/sms.c: fixed #397 that smsbox blocked HTTP requests.

2007-04-04  Stipe Tolj  <stolj at kannel.org>
   * configure[.in]: modified the docbook.dsl search path to be more generic
     since some distros have more recent version paths (ie. 1.79 for FC5 on 
     x86_86 architectures), and we don't want to sum up every single version.
     We relly on any match we get in the for shell loop and continue.

2007-04-03  Stipe Tolj  <stolj at kannel.org>