@@ -16,12 +16,10 @@ D/wmlscript////
 /COPYING/1.2/Sun Dec 18 19:54:06 2005//
 /INSTALL/1.2/Sun Dec 18 19:54:06 2005//
 /LICENSE/1.6/Sun Jan 14 19:21:33 2007//
-/Makefile.in/1.79/Wed May 10 12:17:15 2006//
 /NEWS/1.55/Sat Oct  7 15:18:04 2006//
 /README/1.42/Sun Dec 18 19:54:07 2005//
 /STATUS/1.34/Sun Dec 18 19:54:03 2005//
 /VERSION/1.97/Sun Dec 18 19:54:03 2005//
-/aclocal.m4/1.9/Sat Jun  3 11:42:46 2006//
 /config.guess/1.7/Sun Dec 18 19:54:03 2005//
 /config.sub/1.7/Sun Dec 18 19:54:03 2005//
 /gw-config.h.in/1.19/Sun Jan 14 19:21:34 2007//
@@ -30,4 +28,6 @@ D/wmlscript////
 /mkinstalldirs/1.1/Sun Dec 18 19:54:06 2005//
 /configure/1.166/Wed Apr 11 17:06:10 2007//
 /configure.in/1.173/Wed Apr 11 17:06:10 2007//
-/ChangeLog/1.2885/Wed Apr 18 08:17:21 2007//
+/ChangeLog/1.2886/Sun Apr 22 11:22:43 2007//
+/Makefile.in/1.80/Sun Apr 22 11:22:43 2007//
+/aclocal.m4/1.10/Sun Apr 22 11:22:43 2007//
